--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
   grid-template-columns: repeat(4, 200px);
 } 
 .header{  
-  background-color: red;
+  background-color: purple;
   grid-column: span 4;
 }
 .content{
