--- a/style.css
+++ b/style.css
@@ -4,23 +4,23 @@ body{
 .grid{
   display: grid;
   gap: 10px;
-  grid-template-rows: repeat(4, 200px);
-  grid-template-columns: repeat(4, 200px);
+  grid-template-columns: [first-cline] 100px [second-cline] 100px [third-cline] 100px [fourth-cline ] 100px [fifth-cline];
+  grid-template-rows: repeat(4, 100px [row-line]);
 } 
 .header{  
   background-color: purple;
-  grid-column: span 4;
+  grid-column: first-cline / fifth-cline;
 }
 .content{
   background-color: blue;
-  grid-column: span 3;
-  grid-row: span 2;
+  grid-column: first-cline / fourth-cline;
+  grid-row: row-line 1 / row-line 3;
 }
 .nav{
 background-color: green;
-  grid-row: span 2;
+  grid-row: row-line 1 / row-line 3;
 }
 .footer{
   background-color: orange;
-  grid-column: span 4;
+  grid-column: first-cline / fifth-cline;
 }
