--- a/style.css
+++ b/style.css
@@ -4,23 +4,28 @@ body{
 .grid{
   display: grid;
   gap: 10px;
-  grid-template-columns: [first-cline] 100px [second-cline] 100px [third-cline] 100px [fourth-cline ] 100px [fifth-cline];
-  grid-template-rows: repeat(4, 100px [row-line]);
+  height: 50vh; /*그리드의 높이를 지정해줘야한다. because row's size is defined with grid'height*/
+  /*repeat is not working at grid-template*/
+  /* row'size / column's size */
+  grid-template: 
+  "header header header header" 1fr
+  "content content content nav" 2fr
+  "footer footer footer footer" 1fr / 1fr 1fr 1fr 1fr;
+  /*fr은 해당면적에서 사용가능한 모든 영역을 의미 1fr 1fr 1fr 1fr 은 그영역을 4등분한다. grid is smart*/
 } 
 .header{  
   background-color: purple;
-  grid-column: first-cline / fifth-cline;
+  grid-area: header;
 }
 .content{
   background-color: blue;
-  grid-column: first-cline / fourth-cline;
-  grid-row: row-line 1 / row-line 3;
+  grid-area: content;
 }
 .nav{
 background-color: green;
-  grid-row: row-line 1 / row-line 3;
+  grid-area: nav;
 }
 .footer{
   background-color: orange;
-  grid-column: first-cline / fifth-cline;
+  grid-area: footer;
 }
