--- a/style.css
+++ b/style.css
@@ -4,28 +4,31 @@ body{
 .grid{
   display: grid;
   gap: 10px;
-  height: 50vh; /*그리드의 높이를 지정해줘야한다. because row's size is defined with grid'height*/
-  /*repeat is not working at grid-template*/
-  /* row'size / column's size */
-  grid-template: 
-  "header header header header" 1fr
-  "content content content nav" 2fr
-  "footer footer footer footer" 1fr / 1fr 1fr 1fr 1fr;
-  /*fr은 해당면적에서 사용가능한 모든 영역을 의미 1fr 1fr 1fr 1fr 은 그영역을 4등분한다. grid is smart*/
+  height: 50vh;
+  grid-template-rows: repeat(4, 100px);
+  grid-template-columns: repeat(4, 100px);
+  justify-items: center; /* Placing items in Horizontal*/
+  align-items: center; /* Placing items in Vertical*/
+  /*ShortCut*/
+  place-items: end center; /*Vertical Horizontal*/  
 } 
 .header{  
+  width: 40px;
+  height: 40px;
   background-color: purple;
-  grid-area: header;
 }
 .content{
+  width: 40px;
+  height: 40px;
   background-color: blue;
-  grid-area: content;
 }
 .nav{
+  width: 40px;
+  height: 40px;
 background-color: green;
-  grid-area: nav;
 }
 .footer{
+  width: 40px;
+  height: 40px;
   background-color: orange;
-  grid-area: footer;
 }
