--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+.body{
 }
 
 .grid{
@@ -6,8 +6,6 @@ body{
   gap: 10px;
   height: 50vh;
   grid-template-rows: repeat(4, 100px);
-  grid-auto-columns: 100px;
-  grid-template-columns: repeat(8, minmax(100px, 1fr));
 } 
 .header{  
   background-color: red;
@@ -20,9 +18,21 @@ body{
 .item{
   color: red;
 }
+
+/*item 클래를 가지는 component중 몇번째 자식~*/
 .item:nth-child(odd){ /*solo*/
 background-color: greenyellow;
 }
 .item:nth-child(even){ /*couple*/
 background-color: blue;
+}
+
+/*auto-fill/fit 은 repeat함수 내에서만 유효하다*/
+.grid:first-child{
+  /*auto-fill은 할당된 공간을 나누어 가능한 많은 grid공간을 확보한다.*/
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+.grid:last-child{
+  /*auto-fit은 주어진element 를 가능한 만큼 늘여서 공간을 채운다.*/
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
