<SCSS> @extend를 활용하여 style의 공통 분모를 재사용해 코드를 간략화 할 수 있다.

--- a/scss/src/scss/styles.scss
+++ b/scss/src/scss/styles.scss
@@ -1,18 +1,13 @@
 @import "_variables";
 @import "_mixins";
+@import "_buttons";
 
-h2{
-	color: $bg;
+a{
+	@extend %button;
+	text-decoration: none;
 }
 
-/*& means itself in scss*/
-a{
-	display: block;
-	margin-bottom: 12px;
-	&:nth-child(odd){  /*odd = couple*/
-		@include SetColor1(red);
-	}
-	&:nth-child(even){
-		@include SetColor2('even');
-	}
+button{
+	@extend %button;
+	border: none;
 }
