--- a/scss/src/scss/_mixins.scss
+++ b/scss/src/scss/_mixins.scss
@@ -1,11 +1,24 @@
-@mixin SetColor1($color){
-	color : $color;
-}
-@mixin SetColor2($word){
-	@if $word =='odd'{
-		color : red;
+/*mixin module: https://github.com/colourgarden/awesome-scss*/
+@mixin responsive($device){
+	@if $device == 'A'{
+		@media screen and (min-width: 500px) and (max-width: 550px){
+			@content;
+		}
 	}
-	@else {
-		color: blue;
+	@else if $device == 'B'{
+		@media screen and (min-width: 551px) and (max-width: 600px){
+			@content;
+		}
 	}
+	@else if $device == 'C'{
+		@media screen and (min-width: 601px) and (max-width: 650px){
+			@content;
+		}
+	}
+	@else if $device == 'D'{
+		@media screen and (min-width: 651px){
+			@content;
+		}
+	}
+
 }
